Add loading indicator and fix concurrency issues with page refresh

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -19,7 +19,11 @@
         <div id="itemsToBuy" class="items-container"></div>
         <div id="itemsBought" class="items-container"></div>
     </div>
-    <!--</div>-->
+    <div id="loading">
+        <span class="centered">
+            Loading...
+        </span>
+    </div>
 </body>
 </html>
 <script src="item.js"></script>
