--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,6 +6,7 @@
     <title>shop</title>
     <link href="/item.css" rel="stylesheet" />
     <link href="/index.css" rel="stylesheet" />
+    <link href="/dev.css" rel="stylesheet" />
 </head>
 <body>
     <noscript>
@@ -19,6 +20,7 @@
         <div id="itemsToBuy" class="items-container"></div>
         <div id="itemsBought" class="items-container"></div>
     </div>
+    <div class="watch-simulator"></div>
 </body>
 </html>
 <script src="item.js"></script>
