--- a/wwwroot/manager.html
+++ b/wwwroot/manager.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="main-component.js" type="module"></script>
+    <title></title>
+    <link href="site.css" rel="stylesheet" />
 </head>
 <body>
-    <main-component>
-        <div style="text-align:center; color: white">TODO</div>
-    </main-component>
+    <noscript>App requires JavaScript enabled browser!</noscript>
+    <div id="main">
+        <div style="color: white; text-align: center;">Manager</div>        
+    </div>
 </body>
 </html>
+<script src="site.js" type="module"></script>
