--- a/wwwroot/manager.html
+++ b/wwwroot/manager.html
@@ -18,29 +18,41 @@
 <script src="site.js" type="module"></script>
 
 <style>
+    ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     li {
+        display: flex;
+        align-items: center;
         color: white;
         font-family: Arial;
         list-style: none;
-        display: block;
         margin-bottom: 20px;
         font-size: large;
+        vertical-align: middle;
     }
 
-    li span, button {
-        display: inline-block;
-    }
+        li span, button {
+            display: inline-block;
+        }
 
-    li span {
-        width: 20%;
-        min-width: 150px;
-        margin-right: 25px; 
-    }
+        li span {
+            width: 150px;
+            margin-right: 25px;
+        }
 
-    li button {
-        text-align: center;
-        margin-right: 15px;
-    }
+        li button {
+            height: 30px;
+            width: 30px;
+            border-radius: 15px;
+            background-color: coral;
+            text-align: center;
+            margin-right: 15px;
+            cursor: pointer;
+        }
 </style>
 
 <script type="module">
